# info-system

./: CMakeLists.txt  README.md
TP01/ExMerde/: Makefile  emacs.txt  vi.txt
TP01/Exo04/: listeAttributs  listeAttributs.c
TP02/Exo02/: fork.c  fork.drawio
TP02/Exo03/: exec.c
TP02/Exo04/: zombie.c
TP02/Exo05/: CMakeLists.txt  adechiffrer.c
TP02/Exo06/: mgrep.c
TP03/Ex02b/: pgmA.c  pgmB.c
TP03/Exo01/: pipes.c
TP03/Exo02/: signals.c
TP03/Exo03/: comm.c
TP03/Exo05/: fifo.c
TP04/Exo01/: pv.c
TP04/Exo01-02/: pv.c
TP04/Exo03/: sync_child.c
TP04/Exo04a/: CMakeLists.txt  sync_process_a.c
TP04/Exo04b/: sync_process_b.c
TP04/Exo05/: sync_2children.c
TP05/Exo01/: keyboard.c
TP05/Exo02/: CMakeLists.txt  matrix.c
TP05/Exo02b/: matrix.c
TP05/Exo02c/: matrix.c
TP06/Exo01/: sharedmem.c
customlibs/sem/: sem.c  sem.h
exo03/: viAndEmacs.txt
templates/: fork_template.c
